fixed image view on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1115,7 +1115,7 @@ tr {
   .watchPic {
     margin: auto;
   }
-  .watchPic img {
+  .watchPicImg {
     height: 500px;
   }
 }
